ui improvements + added rv for admin to be able to see who bought a flight ticket

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidProject</string>
+    <string name="app_name">FlightBooking</string>
     <string name="choose_city">Choose a city</string>
     <string name="choose_way">Choose flight type</string>
 
